day3/main.tf
provider "aws" {
  region = terraform.workspace == "default" ? "us-east-1" : "us-west-2"
}

#get linux ami id using ssm parameter endpoint in us-east-1

data "aws_ssm_parameter" "linuxAmi" {
 name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

#create and bosstrap ec3 in us-east-1

resource "aws_instance" "ec2-vm" {
 ami                    = data.aws_ssm_parameter.linuxAmi.value
 instance_type          = "t2.micro"
 associate_public_ip_address = true
 vpc_security_group_ids      = [aws_security_group.sg.id]
 subnet_id                   = aws_subnet.subnet.id

 tags = {
  Name = "${terraform.workspace}-ec2"
 }
}
